Fix visibility of go up button on footer.

--- a/public/styles/footer.css
+++ b/public/styles/footer.css
@@ -22,6 +22,7 @@
   position:fixed;
   bottom: 15px;
   opacity: 50%;
+  display: none;
 }
 
 #footer a:hover {
